FIX: Se hizo que algunos bordes sean invisibles
Se hizo que solo los bordes de los inputs sean invisibles para los nombres de secciones, filas y campos

--- a/src/assets/bootstrap-colors.scss
+++ b/src/assets/bootstrap-colors.scss
@@ -8,6 +8,4 @@ $dark: #21394f;
 $light: #eeeef5;
 $body-bg: #ffffff;
 
-$input-border-color: transparent;
-
 @import "bootstrap";
